--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
 body {
-  background-color: rgba(90, 80, 70, 1);
+  background-color: black;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+th {
+  background-color: #2A2B2DFF;
+  color: #D9514EFF;
+  text-align: left;
+  font-size: 28px;
+}
+
+td {
+  background-color: #2A2B2DFF;
+  color: #5BA2FF;
+  font-size: 15px;
+}
+
+tr{
+  border: 10px;
 }
